Increase font size to avoid zoom issue on iPhone

--- a/web/main/fonts.css
+++ b/web/main/fonts.css
@@ -6,13 +6,13 @@
 @import url('@fontsource/inika');
 
 :root {
-  --base-font: 400 15px/1.6 'Noto Sans Variable', 'Arial', sans-serif;
+  --base-font: 400 16px/1.6 'Noto Sans Variable', 'Arial', sans-serif;
   --app-title-font:
-    400 23px/1.2 'Inika', 'Noto Serif Variable', 'Georgia', serif;
-  --control-font: 500 15px/1.2 'Noto Sans Variable', 'Arial', sans-serif;
-  --control-cta-font: 700 15px/1.2 'Noto Sans Variable', 'Arial', sans-serif;
+    400 24px/1.2 'Inika', 'Noto Serif Variable', 'Georgia', serif;
+  --control-font: 500 16px/1.2 'Noto Sans Variable', 'Arial', sans-serif;
+  --control-cta-font: 700 16px/1.2 'Noto Sans Variable', 'Arial', sans-serif;
   --control-secondary-font:
-    600 13px/1.2 'Noto Sans Variable', 'Arial', sans-serif;
-  --mono-font: 400 15px/1.6 'Noto Mono Sans Variable', monospace;
-  --control-mono-font: 500 15px/1.6 'Noto Mono Sans Variable', monospace;
+    600 14px/1.2 'Noto Sans Variable', 'Arial', sans-serif;
+  --mono-font: 400 16px/1.6 'Noto Mono Sans Variable', monospace;
+  --control-mono-font: 500 16px/1.6 'Noto Mono Sans Variable', monospace;
 }
